argo/clusters/eks-demo-tsh/nginx-yaml/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-yaml-deployment
  namespace: nginx
  labels:
    app: nginx-yaml
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-yaml
  template:
    metadata:
      labels:
        app: nginx-yaml
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0
        ports:
        - containerPort: 80
