argo/clusters/eks-demo-tsh/nginx-yaml/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-yaml-service
  namespace: nginx
spec:
  selector:
    app: nginx-yaml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
